--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-native-community/art": "^1.2.0",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.0.7",
     "@react-navigation/native": "^6.0.4",
@@ -19,6 +20,8 @@
     "google-maps-react": "^2.0.6",
     "lpf": "^1.0.0",
     "moment": "^2.29.1",
+    "pubnub": "^4.35.0",
+    "pubnub-react": "^2.1.1",
     "react": "17.0.1",
     "react-clock": "^3.0.0",
     "react-hover": "^3.0.1",
@@ -41,6 +44,7 @@
     "react-native-permissions": "^3.1.0",
     "react-native-qrcode-scanner": "^1.5.4",
     "react-native-reanimated": "^2.2.2",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
     "react-native-sensors": "^7.3.3",
